[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=1]
[ext_resource path="res://UI/Dialogs/AboutDialog.gd" type="Script" id=2]
[ext_resource path="res://Assets/icon.png" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="AboutDialog" type="WindowDialog"]
visible = true
margin_right = 450.0
margin_bottom = 205.0
rect_min_size = Vector2( 450, 205 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "ABOUT_DIALOG_TITLE"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 438.0
margin_bottom = 234.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 426.0
margin_bottom = 64.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 426.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 2
custom_constants/margin_left = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 12.0
margin_top = 2.0
margin_right = 346.0
margin_bottom = 64.0
alignment = 1

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 1.0
margin_right = 334.0
margin_bottom = 18.0
text = "DrawN'Gcode vX.Y.Z"

[node name="CopyrightLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 334.0
margin_bottom = 39.0
text = "ABOUT_DIALOG_COPYRIGHT"

[node name="GithubLinkButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 272.0
margin_bottom = 60.0
size_flags_horizontal = 0
text = "github.com/QueenChristina/draw-to-gcode"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 426.0
margin_bottom = 72.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 426.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 170.0
margin_bottom = 17.0
text = "ABOUT_DIALOG_LICSENSE"

[node name="LicenseButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 174.0
margin_right = 249.0
margin_bottom = 17.0
text = "MIT License"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 426.0
margin_bottom = 117.0
custom_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 426.0
margin_bottom = 138.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 112.0
margin_bottom = 17.0
text = "ABOUT_MADE_IN"

[node name="GodotButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 116.0
margin_right = 242.0
margin_bottom = 17.0
focus_mode = 2
text = "Godot Game Engine"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 426.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
margin_right = 177.0
margin_bottom = 17.0
text = "ABOUT_DIALOG_BASED_ON"

[node name="LorienButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
margin_left = 181.0
margin_right = 292.0
margin_bottom = 17.0
focus_mode = 2
text = "Lorien by mbrlabs"

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 426.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
margin_right = 426.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Lorien by Marcus Brummer & contributors"
align = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 426.0
margin_bottom = 201.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_right = 186.0
margin_bottom = 17.0
text = "ABOUT_DIALOG_EASTEREGG"

[node name="KennyButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 190.0
margin_right = 378.0
margin_bottom = 17.0
focus_mode = 2
text = "Kenny's Platformer Art Deluxe"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 426.0
margin_bottom = 222.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 58.0
margin_bottom = 17.0
text = "Icon set:"

[node name="RemixIconsButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 62.0
margin_right = 129.0
margin_bottom = 17.0
focus_mode = 2
text = "Remix Icon"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/GithubLinkButton" to="." method="_on_GithubLinkButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/LicenseButton" to="." method="_on_LicenseButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/GodotButton" to="." method="_on_GodotButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer6/LorienButton" to="." method="_on_LorienButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer5/KennyButton" to="." method="_on_KennyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/RemixIconsButton" to="." method="_on_RemixIconsButton_pressed"]
